feat: add token-generation, password-change on userpage
